<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alke_white">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/size_icon"
        android:layout_height="@dimen/size_icon"
        android:layout_margin="@dimen/margin_normal"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_title"
        android:textColor="@color/alke_black"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBack" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@color/alke_gray_bg"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />

    <!-- Profile Block -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/margin_normal"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <TextView
        android:id="@+id/tvRecipientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/placeholder_recipient_name_request"
        android:textColor="@color/alke_black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePhoto"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePhoto" />

    <TextView
        android:id="@+id/tvRecipientEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_recipient_email_request"
        android:textColor="@color/alke_gray_text"
        android:textSize="@dimen/text_caption"
        app:layout_constraintStart_toStartOf="@+id/tvRecipientName"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipientName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/label_amount_request"
        app:boxStrokeColor="@color/alke_green_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePhoto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/placeholder_amount_request" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNotes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/label_notes"
        android:minHeight="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilAmount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIngresarDinero"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_button"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/btn_request"
        android:textColor="@color/alke_white"
        app:backgroundTint="@color/alke_blue_primary"
        app:cornerRadius="@dimen/radius_button"
        app:icon="@drawable/ic_request"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>