<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alke_white">

    <!-- Header -->
    <View
        android:id="@+id/headerBg"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_header_home"
        android:background="@color/alke_blue_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/home_title"
        android:textColor="@color/alke_white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfile"
        android:layout_width="@dimen/size_avatar_home"
        android:layout_height="@dimen/size_avatar_home"
        android:layout_margin="@dimen/margin_normal"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_profile_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <ImageView
        android:id="@+id/ivNotification"
        android:layout_width="@dimen/size_icon"
        android:layout_height="@dimen/size_icon"
        android:layout_marginEnd="@dimen/margin_normal"
        android:src="@drawable/ic_notification"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
        app:layout_constraintEnd_toStartOf="@+id/ivProfile"
        app:layout_constraintTop_toTopOf="@+id/ivProfile" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/home_greeting"
        android:textColor="@color/alke_white"
        android:textSize="@dimen/text_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvBalanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/home_balance_label"
        android:textColor="@color/alke_white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreeting" />

    <TextView
        android:id="@+id/tvBalanceAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:text="@string/home_balance_amount"
        android:textColor="@color/alke_white"
        android:textSize="@dimen/text_display"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBalanceLabel" />

    <!-- Content -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBg">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnviarDinero"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_enviar_dinero"
            android:textColor="@color/alke_white"
            android:textSize="@dimen/text_body"
            app:backgroundTint="@color/alke_green_action"
            app:cornerRadius="@dimen/radius_button"
            app:icon="@drawable/ic_send"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresarDinero"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_ingresar_dinero"
            android:textColor="@color/alke_white"
            android:textSize="@dimen/text_body"
            app:backgroundTint="@color/alke_blue_primary"
            app:cornerRadius="@dimen/radius_button"
            app:icon="@drawable/ic_request"
            app:iconGravity="textStart" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTransactionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/home_transactions_title"
        android:textColor="@color/alke_black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransactions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTransactionsTitle"
        tools:listitem="@layout/item_transaction" />

    <LinearLayout
        android:id="@+id/emptyStateContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTransactionsTitle">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_empty_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/home_empty_msg"
            android:textColor="@color/alke_gray_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>