<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_small">

    <ImageView
        android:id="@+id/ivTransactionIcon"
        android:layout_width="@dimen/size_icon"
        android:layout_height="@dimen/size_icon"
        android:src="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/placeholder_user_name"
        android:textColor="@color/alke_black"
        android:textSize="@dimen/text_body"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvAmount"
        app:layout_constraintStart_toEndOf="@+id/ivTransactionIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_date"
        android:textColor="@color/alke_gray_text"
        android:textSize="@dimen/text_caption"
        app:layout_constraintEnd_toEndOf="@+id/tvUserName"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_amount"
        android:textSize="@dimen/text_body"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvUserName" />

</androidx.constraintlayout.widget.ConstraintLayout>